@@ -25,7 +25,7 @@
 	    <maven.compiler.target>${java-version-compliance}</maven.compiler.target>	
 	    <maven.compiler.release>${java-version-compliance}</maven.compiler.release>
 	    <!-- fj java versions -->
-	    <fj-version>8.1.0-rc.1</fj-version>
+	    <fj-version>8.1.0-rc.2</fj-version>
 	    <fj-doc-version>${project.version}</fj-doc-version>
 	    <jackson-version>2.15.2</jackson-version>
 	    <!-- deprecated and incubator modules version -->
